data/all_generated_tests/raw_wast_tests/nop_MismanagementofBlockNesting_389.wast
;; 10. **Inline nested block complexity with `nop`:** Create a function with inline nested blocks combined with complex control flow involving jumps (`br`, `br_if`). Ensure that `nop` instructions inside these blocks do not mismanage the stack or control flow, verifying correct block nesting and reset behavior by the `resetSig` method.

(assert_invalid
  (module
    (func
      (block
        (nop)
        (block
          (br 0)
          (nop)
          (block
            (br_if 0 (i32.const 1))
            (nop)
          )
        )
      )
    )
  )
  "type mismatch"
)